--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="scss/main.scss" />
+    <script defer type="module" src="js/controller.js"></script>
     <title>Furniro Shop</title>
   </head>
   <body></body>
