--- a/index.html
+++ b/index.html
@@ -9,9 +9,71 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="scss/main.scss" />
     <script defer type="module" src="js/controller.js"></script>
     <title>Furniro Shop</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="navbar">
+        <div class="logo-links">
+          <div class="hamburger-menu">
+            <span class="material-symbols-outlined"> close </span>
+            <div class="links-hamburger-meniu">
+              <a href="#" class="hamburger-link-home _link">Home</a>
+              <a href="#" class="hamburger-link-shop _link">Shop</a>
+            </div>
+          </div>
+
+          <div class="logo">
+            <div class="hamburger-meniu-icon">
+              <!-- <span class="material-symbols-outlined">menu</span> -->
+            </div>
+            <img src="imgs/Meubel House_Logos-05.png" alt="company logo" class="company-logo" />
+            <span class="title-company-name">Furniro</span>
+          </div>
+          <nav class="navbar-links">
+            <a href="#" class="home-link link">Home</a>
+            <a href="#" class="shop-link link">Shop</a>
+          </nav>
+        </div>
+        <div class="cart-icon">
+          <span class="material-symbols-outlined"> shopping_cart </span>
+        </div>
+      </div>
+
+      <div class="cart-menu">
+        <div class="title-closing-icon">
+          <span class="title-shopping--cart">Shopping Cart</span>
+          <span class="material-symbols-outlined close-icon"> close </span>
+        </div>
+        <div class="cart-list"></div>
+        <div class="subtotal-cart">
+          <span class="subtotal-span">Subtotal</span>
+          <p class="subtoal-price__cart">0$</p>
+        </div>
+        <div class="checkout-cart">
+          <button class="cart-button cart-btn">Cart</button>
+          <button class="checkout-btn cart-btn">Checkout</button>
+          <button class="comprasion-btn-checkout cart-btn">Comparsion</button>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="home-page">
+        <div class="hero-banner">
+          <div class="hero-content">
+            <span class="arrivals-small--text">New Arrival</span>
+            <h1 class="main-heading">
+              Discover Our <br />
+              New Collection
+            </h1>
+            <p class="hero-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem a vero consequatur quod velit eos.</p>
+            <button class="hero-buton__buy---now">Buy Now</button>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
