am terminat cu responsive-ul si tot ce inseamna partea de html css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
           <div class="logo">
             <div class="hamburger-meniu-icon">
-              <!-- <span class="material-symbols-outlined">menu</span> -->
+              <span class="material-symbols-outlined">menu</span>
             </div>
             <img src="imgs/Meubel House_Logos-05.png" alt="company logo" class="company-logo" />
             <span class="title-company-name">Furniro</span>
@@ -44,14 +44,16 @@
       </div>
 
       <div class="cart-menu">
-        <div class="title-closing-icon">
-          <span class="title-shopping--cart">Shopping Cart</span>
-          <span class="material-symbols-outlined close-icon"> close </span>
+        <div class="cart-header">
+          <span class="title-shopping__cart">Shopping Cart</span>
+          <span class="material-symbols-outlined"> close </span>
         </div>
         <div class="cart-list"></div>
         <div class="subtotal-cart">
-          <span class="subtotal-span">Subtotal</span>
-          <p class="subtoal-price__cart">0$</p>
+          <div class="space-for__mobile">
+            <span class="subtotal-span">Subtotal</span>
+            <p class="subtoal-price__cart">$0</p>
+          </div>
         </div>
         <div class="checkout-cart">
           <button class="cart-button cart-btn">Cart</button>
@@ -61,7 +63,7 @@
       </div>
     </header>
     <main>
-      <section class="home-page">
+      <section class="home-page" id="home">
         <div class="hero-banner">
           <div class="hero-container">
             <div class="hero-content">
@@ -109,10 +111,106 @@
                 </div>
               </div>
             </div>
+
+            <div class="card">
+              <div class="item">
+                <div class="product-img">
+                  <img src="/imgs/img1.png" alt="" />
+                </div>
+                <div class="box-card__info">
+                  <h4>Slytherine</h4>
+                  <span class="description-card">Stylish cafe chair</span>
+                  <span class="price"> $500</span>
+                </div>
+              </div>
+              <div class="hover">
+                <div class="product-actions">
+                  <button class="add-to__cart">Add to cart</button>
+                  <div class="icons-actions">
+                    <div class="share action">
+                      <span>Share</span>
+                      <span class="material-symbols-outlined"> share </span>
+                    </div>
+                    <div class="compare action">
+                      <span>Compare</span>
+                      <span class="material-symbols-outlined"> compare_arrows </span>
+                    </div>
+                    <div class="like action">
+                      <span>Like</span>
+                      <span class="material-symbols-outlined"> thumb_up </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="item">
+                <div class="product-img">
+                  <img src="/imgs/img1.png" alt="" />
+                </div>
+                <div class="box-card__info">
+                  <h4>Slytherine</h4>
+                  <span class="description-card">Stylish cafe chair</span>
+                  <span class="price"> $500</span>
+                </div>
+              </div>
+              <div class="hover">
+                <div class="product-actions">
+                  <button class="add-to__cart">Add to cart</button>
+                  <div class="icons-actions">
+                    <div class="share action">
+                      <span>Share</span>
+                      <span class="material-symbols-outlined"> share </span>
+                    </div>
+                    <div class="compare action">
+                      <span>Compare</span>
+                      <span class="material-symbols-outlined"> compare_arrows </span>
+                    </div>
+                    <div class="like action">
+                      <span>Like</span>
+                      <span class="material-symbols-outlined"> thumb_up </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="item">
+                <div class="product-img">
+                  <img src="/imgs/img1.png" alt="" />
+                </div>
+                <div class="box-card__info">
+                  <h4>Slytherine</h4>
+                  <span class="description-card">Stylish cafe chair</span>
+                  <span class="price"> $500</span>
+                </div>
+              </div>
+              <div class="hover">
+                <div class="product-actions">
+                  <button class="add-to__cart">Add to cart</button>
+                  <div class="icons-actions">
+                    <div class="share action">
+                      <span>Share</span>
+                      <span class="material-symbols-outlined"> share </span>
+                    </div>
+                    <div class="compare action">
+                      <span>Compare</span>
+                      <span class="material-symbols-outlined"> compare_arrows </span>
+                    </div>
+                    <div class="like action">
+                      <span>Like</span>
+                      <span class="material-symbols-outlined"> thumb_up </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <button class="our-button__show--more">Show More</button>
         </article>
       </section>
+
       <!--Shop Page-->
       <section class="shop-page" id="shop">
         <article class="banner">
@@ -158,12 +256,108 @@
                 </div>
               </div>
             </div>
+
+            <div class="card">
+              <div class="item">
+                <div class="product-img">
+                  <img src="/imgs/img1.png" alt="" />
+                </div>
+                <div class="box-card__info">
+                  <h4>Slytherine</h4>
+                  <span class="description-card">Stylish cafe chair</span>
+                  <span class="price"> $500</span>
+                </div>
+              </div>
+              <div class="hover">
+                <div class="product-actions">
+                  <button class="add-to__cart">Add to cart</button>
+                  <div class="icons-actions">
+                    <div class="share action">
+                      <span>Share</span>
+                      <span class="material-symbols-outlined"> share </span>
+                    </div>
+                    <div class="compare action">
+                      <span>Compare</span>
+                      <span class="material-symbols-outlined"> compare_arrows </span>
+                    </div>
+                    <div class="like action">
+                      <span>Like</span>
+                      <span class="material-symbols-outlined"> thumb_up </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="item">
+                <div class="product-img">
+                  <img src="/imgs/img1.png" alt="" />
+                </div>
+                <div class="box-card__info">
+                  <h4>Slytherine</h4>
+                  <span class="description-card">Stylish cafe chair</span>
+                  <span class="price"> $500</span>
+                </div>
+              </div>
+              <div class="hover">
+                <div class="product-actions">
+                  <button class="add-to__cart">Add to cart</button>
+                  <div class="icons-actions">
+                    <div class="share action">
+                      <span>Share</span>
+                      <span class="material-symbols-outlined"> share </span>
+                    </div>
+                    <div class="compare action">
+                      <span>Compare</span>
+                      <span class="material-symbols-outlined"> compare_arrows </span>
+                    </div>
+                    <div class="like action">
+                      <span>Like</span>
+                      <span class="material-symbols-outlined"> thumb_up </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="item">
+                <div class="product-img">
+                  <img src="/imgs/img1.png" alt="" />
+                </div>
+                <div class="box-card__info">
+                  <h4>Slytherine</h4>
+                  <span class="description-card">Stylish cafe chair</span>
+                  <span class="price"> $500</span>
+                </div>
+              </div>
+              <div class="hover">
+                <div class="product-actions">
+                  <button class="add-to__cart">Add to cart</button>
+                  <div class="icons-actions">
+                    <div class="share action">
+                      <span>Share</span>
+                      <span class="material-symbols-outlined"> share </span>
+                    </div>
+                    <div class="compare action">
+                      <span>Compare</span>
+                      <span class="material-symbols-outlined"> compare_arrows </span>
+                    </div>
+                    <div class="like action">
+                      <span>Like</span>
+                      <span class="material-symbols-outlined"> thumb_up </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </article>
       </section>
 
       <!-- single prodcut -->
-      <section class="" id="single-product-page">
+      <section class="single-product__page" id="single-product">
         <div class="product-shop__bread-c">
           <div class="bread-container">
             <a href="#" class="back-home">Home</a>
@@ -189,7 +383,7 @@
                   <span class="material-symbols-outlined">star</span>
                   <span class="material-symbols-outlined">star</span>
                   <p class="number-reviews">800</p>
-                  <p class="customer-review">Customer Review</p>
+                  <p class="customer-review">Customer Reviews</p>
                 </div>
               </div>
               <p class="description">
@@ -223,7 +417,7 @@
         <div class="information-order">
           <aside class="form-costumer">
             <h2>Billing details</h2>
-            <form action="" id="form--contact" method="post">
+            <form action="" id="form--contact" method="POST">
               <div class="full-name">
                 <div class="first-name">
                   <label for="firstName">First Name</label>
