--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="navbar">
         <div class="logo-links">
           <div class="hamburger-menu">
-            <span class="material-symbols-outlined"> close </span>
+            <span class="material-symbols-outlined close-hamburger"> close </span>
             <div class="links-hamburger-meniu">
               <a href="#" class="hamburger-link-home _link">Home</a>
               <a href="#" class="hamburger-link-shop _link">Shop</a>
@@ -28,9 +28,9 @@
 
           <div class="logo">
             <div class="hamburger-meniu-icon">
-              <span class="material-symbols-outlined">menu</span>
+              <span class="material-symbols-outlined hamburger-menu-open">menu</span>
             </div>
-            <img src="imgs/Meubel House_Logos-05.png" alt="company logo" class="company-logo" />
+            <img src="imgs/Meubel House_Logos-05@2x.png" alt="company logo" class="company-logo" />
             <span class="title-company-name">Furniro</span>
           </div>
           <nav class="navbar-links">
@@ -39,20 +39,20 @@
           </nav>
         </div>
         <div class="cart-icon">
-          <span class="material-symbols-outlined"> shopping_cart </span>
+          <span class="material-symbols-outlined cart-icon-btn"> shopping_cart </span>
         </div>
       </div>
 
       <div class="cart-menu">
         <div class="cart-header">
           <span class="title-shopping__cart">Shopping Cart</span>
-          <span class="material-symbols-outlined"> close </span>
+          <span class="material-symbols-outlined close"> close </span>
         </div>
         <div class="cart-list"></div>
         <div class="subtotal-cart">
           <div class="space-for__mobile">
             <span class="subtotal-span">Subtotal</span>
-            <p class="subtoal-price__cart">$0</p>
+            <p class="subtotal-price__cart">$0</p>
           </div>
         </div>
         <div class="checkout-cart">
@@ -79,134 +79,7 @@
         </div>
         <article class="our-products">
           <h2>Our Products</h2>
-          <div class="container-cards">
-            <div class="card">
-              <div class="item">
-                <div class="product-img">
-                  <img src="/imgs/img1.png" alt="" />
-                </div>
-                <div class="box-card__info">
-                  <h4>Slytherine</h4>
-                  <span class="description-card">Stylish cafe chair</span>
-                  <span class="price"> $500</span>
-                </div>
-              </div>
-              <div class="hover">
-                <div class="product-actions">
-                  <button class="add-to__cart">Add to cart</button>
-                  <div class="icons-actions">
-                    <div class="share action">
-                      <span>Share</span>
-                      <span class="material-symbols-outlined"> share </span>
-                    </div>
-                    <div class="compare action">
-                      <span>Compare</span>
-                      <span class="material-symbols-outlined"> compare_arrows </span>
-                    </div>
-                    <div class="like action">
-                      <span>Like</span>
-                      <span class="material-symbols-outlined"> thumb_up </span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="item">
-                <div class="product-img">
-                  <img src="/imgs/img1.png" alt="" />
-                </div>
-                <div class="box-card__info">
-                  <h4>Slytherine</h4>
-                  <span class="description-card">Stylish cafe chair</span>
-                  <span class="price"> $500</span>
-                </div>
-              </div>
-              <div class="hover">
-                <div class="product-actions">
-                  <button class="add-to__cart">Add to cart</button>
-                  <div class="icons-actions">
-                    <div class="share action">
-                      <span>Share</span>
-                      <span class="material-symbols-outlined"> share </span>
-                    </div>
-                    <div class="compare action">
-                      <span>Compare</span>
-                      <span class="material-symbols-outlined"> compare_arrows </span>
-                    </div>
-                    <div class="like action">
-                      <span>Like</span>
-                      <span class="material-symbols-outlined"> thumb_up </span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="item">
-                <div class="product-img">
-                  <img src="/imgs/img1.png" alt="" />
-                </div>
-                <div class="box-card__info">
-                  <h4>Slytherine</h4>
-                  <span class="description-card">Stylish cafe chair</span>
-                  <span class="price"> $500</span>
-                </div>
-              </div>
-              <div class="hover">
-                <div class="product-actions">
-                  <button class="add-to__cart">Add to cart</button>
-                  <div class="icons-actions">
-                    <div class="share action">
-                      <span>Share</span>
-                      <span class="material-symbols-outlined"> share </span>
-                    </div>
-                    <div class="compare action">
-                      <span>Compare</span>
-                      <span class="material-symbols-outlined"> compare_arrows </span>
-                    </div>
-                    <div class="like action">
-                      <span>Like</span>
-                      <span class="material-symbols-outlined"> thumb_up </span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="item">
-                <div class="product-img">
-                  <img src="/imgs/img1.png" alt="" />
-                </div>
-                <div class="box-card__info">
-                  <h4>Slytherine</h4>
-                  <span class="description-card">Stylish cafe chair</span>
-                  <span class="price"> $500</span>
-                </div>
-              </div>
-              <div class="hover">
-                <div class="product-actions">
-                  <button class="add-to__cart">Add to cart</button>
-                  <div class="icons-actions">
-                    <div class="share action">
-                      <span>Share</span>
-                      <span class="material-symbols-outlined"> share </span>
-                    </div>
-                    <div class="compare action">
-                      <span>Compare</span>
-                      <span class="material-symbols-outlined"> compare_arrows </span>
-                    </div>
-                    <div class="like action">
-                      <span>Like</span>
-                      <span class="material-symbols-outlined"> thumb_up </span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="container-cards"></div>
           <button class="our-button__show--more">Show More</button>
         </article>
       </section>
@@ -224,135 +97,7 @@
           </div>
         </article>
         <article class="display-products">
-          <div class="container-cards">
-            <div class="card">
-              <div class="item">
-                <div class="product-img">
-                  <img src="/imgs/img1.png" alt="" />
-                </div>
-                <div class="box-card__info">
-                  <h4>Slytherine</h4>
-                  <span class="description-card">Stylish cafe chair</span>
-                  <span class="price"> $500</span>
-                </div>
-              </div>
-              <div class="hover">
-                <div class="product-actions">
-                  <button class="add-to__cart">Add to cart</button>
-                  <div class="icons-actions">
-                    <div class="share action">
-                      <span>Share</span>
-                      <span class="material-symbols-outlined"> share </span>
-                    </div>
-                    <div class="compare action">
-                      <span>Compare</span>
-                      <span class="material-symbols-outlined"> compare_arrows </span>
-                    </div>
-                    <div class="like action">
-                      <span>Like</span>
-                      <span class="material-symbols-outlined"> thumb_up </span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="item">
-                <div class="product-img">
-                  <img src="/imgs/img1.png" alt="" />
-                </div>
-                <div class="box-card__info">
-                  <h4>Slytherine</h4>
-                  <span class="description-card">Stylish cafe chair</span>
-                  <span class="price"> $500</span>
-                </div>
-              </div>
-              <div class="hover">
-                <div class="product-actions">
-                  <button class="add-to__cart">Add to cart</button>
-                  <div class="icons-actions">
-                    <div class="share action">
-                      <span>Share</span>
-                      <span class="material-symbols-outlined"> share </span>
-                    </div>
-                    <div class="compare action">
-                      <span>Compare</span>
-                      <span class="material-symbols-outlined"> compare_arrows </span>
-                    </div>
-                    <div class="like action">
-                      <span>Like</span>
-                      <span class="material-symbols-outlined"> thumb_up </span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="item">
-                <div class="product-img">
-                  <img src="/imgs/img1.png" alt="" />
-                </div>
-                <div class="box-card__info">
-                  <h4>Slytherine</h4>
-                  <span class="description-card">Stylish cafe chair</span>
-                  <span class="price"> $500</span>
-                </div>
-              </div>
-              <div class="hover">
-                <div class="product-actions">
-                  <button class="add-to__cart">Add to cart</button>
-                  <div class="icons-actions">
-                    <div class="share action">
-                      <span>Share</span>
-                      <span class="material-symbols-outlined"> share </span>
-                    </div>
-                    <div class="compare action">
-                      <span>Compare</span>
-                      <span class="material-symbols-outlined"> compare_arrows </span>
-                    </div>
-                    <div class="like action">
-                      <span>Like</span>
-                      <span class="material-symbols-outlined"> thumb_up </span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="item">
-                <div class="product-img">
-                  <img src="/imgs/img1.png" alt="" />
-                </div>
-                <div class="box-card__info">
-                  <h4>Slytherine</h4>
-                  <span class="description-card">Stylish cafe chair</span>
-                  <span class="price"> $500</span>
-                </div>
-              </div>
-              <div class="hover">
-                <div class="product-actions">
-                  <button class="add-to__cart">Add to cart</button>
-                  <div class="icons-actions">
-                    <div class="share action">
-                      <span>Share</span>
-                      <span class="material-symbols-outlined"> share </span>
-                    </div>
-                    <div class="compare action">
-                      <span>Compare</span>
-                      <span class="material-symbols-outlined"> compare_arrows </span>
-                    </div>
-                    <div class="like action">
-                      <span>Like</span>
-                      <span class="material-symbols-outlined"> thumb_up </span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="shop-cards"></div>
         </article>
       </section>
 
@@ -369,7 +114,7 @@
         </div>
         <div class="single-product__container">
           <div class="image-product">
-            <img src="/imgs/img2.png" alt="" class="product_img" />
+            <img src="/imgs/image 3.png" alt="" class="product_img" />
           </div>
           <div class="details-product">
             <div class="details-product_container">
@@ -408,7 +153,7 @@
           <div class="shop-bread-crumb">
             <h2>Checkout</h2>
             <div class="bread-c">
-              <a href="#">Home</a>
+              <a href="#" class="home-link-checkout">Home</a>
               <span class="material-symbols-outlined arrow"> chevron_right </span>
               <span class="shop--span">Checkout</span>
             </div>
