I did the single product page and increase deacrease implementation

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
               </p>
               <div class="btn--add__to__cart">
                 <div class="quantity">
-                  <button class="quantity-btn decrese">-</button>
-                  <span class="quantityDispaly">1</span>
+                  <button class="quantity-btn decrease">-</button>
+                  <span class="quantityDisplay"></span>
                   <button class="quantity-btn increase">+</button>
                 </div>
                 <button class="add_to_cart style_btn">Add To Cart</button>
