I finished the project

--- a/index.html
+++ b/index.html
@@ -263,5 +263,11 @@
         </div>
       </section>
     </footer>
+    <div class="order-modal" style="display: none">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p class="modal-message"></p>
+      </div>
+    </div>
   </body>
 </html>
