some changes for responsive

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/imgs/favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -265,7 +266,6 @@
     </footer>
     <div class="order-modal" style="display: none">
       <div class="modal-content">
-        <span class="close">&times;</span>
         <p class="modal-message"></p>
       </div>
     </div>
