some tweaks on checkout section

--- a/index.html
+++ b/index.html
@@ -167,20 +167,20 @@
               <div class="full-name">
                 <div class="first-name">
                   <label for="firstName">First Name</label>
-                  <input type="text" id="firstName" name="firstName" required />
+                  <input class="form-input" type="text" id="firstName" name="firstName" required />
                 </div>
                 <div class="last-name">
                   <label for="lastName">Last Name</label>
-                  <input type="text" id="lastName" name="lastName" required />
+                  <input class="form-input" type="text" id="lastName" name="lastName" required />
                 </div>
               </div>
               <div class="street__address">
                 <label for="address">Street address</label>
-                <input type="text" id="address" name="address" required />
+                <input class="form-input" type="text" id="address" name="address" required />
               </div>
               <div class="town__city">
                 <label for="town">Town / City</label>
-                <input type="text" id="town" name="town" required />
+                <input class="form-input" type="text" id="town" name="town" required />
               </div>
             </form>
           </aside>
@@ -197,7 +197,7 @@
               </div>
               <div class="total">
                 <h5>Total</h5>
-                <span class="subtotal-js">$0.00</span>
+                <span class="subtotal-js total-checkout">$0.00</span>
               </div>
             </div>
             <div class="cash--privacy__policy">
